Text overflow fix for whimsical player

--- a/src/widgets/player/whimsical-game/components/ChoiceContent/styles.module.css
+++ b/src/widgets/player/whimsical-game/components/ChoiceContent/styles.module.css
@@ -31,6 +31,10 @@
   }
 }
 
+.button:has(p) {
+  overflow-y: auto;
+}
+
 .expandButton {
   position: absolute;
   top: 10px;
